- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    5.9.2
 - 
    None
 - 
    OS: Arch Linux, running plasma DE
QT components installed:
* qt5-base 5.9.2-1
* qt5-declarative 5.9.2-1
* qt5-graphicaleffects 5.9.2-1
* qt5-location 5.9.2-1
* qt5-multimedia 5.9.2-1
* qt5-quickcontrols 5.9.2-1
* qt5-quickcontrols2 5.9.2-2
* qt5-script 5.9.2-1
* qt5-sensors 5.9.2-1
* qt5-speech 5.9.2-1
* qt5-svg 5.9.2-1
* qt5-tools 5.9.2-1
* qt5-webchannel 5.9.2-1
* qt5-webengine 5.9.2-2
* qt5-webkit 5.212.0alpha2-6
* qt5-x11extras 5.9.2-1
* qt5-xmlpatterns 5.9.2-1
Tested with qutebrowser (built from git: 1.0.2.r155.g17e0f6d23) and qupzilla (2.2.0), same behaviour experienced in both qtwebengine browsers.OS: Arch Linux, running plasma DE QT components installed: * qt5-base 5.9.2-1 * qt5-declarative 5.9.2-1 * qt5-graphicaleffects 5.9.2-1 * qt5-location 5.9.2-1 * qt5-multimedia 5.9.2-1 * qt5-quickcontrols 5.9.2-1 * qt5-quickcontrols2 5.9.2-2 * qt5-script 5.9.2-1 * qt5-sensors 5.9.2-1 * qt5-speech 5.9.2-1 * qt5-svg 5.9.2-1 * qt5-tools 5.9.2-1 * qt5-webchannel 5.9.2-1 * qt5-webengine 5.9.2-2 * qt5-webkit 5.212.0alpha2-6 * qt5-x11extras 5.9.2-1 * qt5-xmlpatterns 5.9.2-1 Tested with qutebrowser (built from git: 1.0.2.r155.g17e0f6d23) and qupzilla (2.2.0), same behaviour experienced in both qtwebengine browsers. 
- 
        f3fdb0d2200ee1fa06bb8620f8bef84a37ab753a
 
(apologies for incomplete bug report, pressed ctrl+enter which submitted before ready)
This only seems to affect one website in particular: https://online.bankofscotland.co.uk/personal/logon/login.jsp
When typing into the username or password textboxes, the focus is lost after a few characters. This previously didn't happen, and does not happen in chromium 62.0.3202.62
When the focus is lost, qutebrowser prints the following message:
15:25:25 DEBUG webview webview:acceptNavigationRequest:296 navigation request: url https://marketing.bankofscotland.co.uk/20414/pQas.html?e=https%3A%2F%2Fonline.bankofscotland.co.uk&eu=https%3A%2F%2Fonline.bankofscotland.co.uk%2Fpersonal%2Flogon%2Flogin.jsp&icid=150911432550328192, type NavigationTypeOther, is_main_frame False 15:25:25 DEBUG webview webview:acceptNavigationRequest:296 navigation request: url https://online.bankofscotland.co.uk/favicon.ico#1509114325, type NavigationTypeOther, is_main_frame False
Qupzilla prints the following:
js: Uncaught SecurityError: Blocked a frame with origin "https://marketing.bankofscotland.co.uk" from accessing a frame with origin "https://online.bankofscotland.co.uk". Protocols, domains, and ports must match.
I have no idea if these are related to the behaviour.
- relates to
 - 
                    
QTBUG-61506 [5.8 REG] Text search is restarted after loading different page
-         
 - Closed
 
 -         
 
| For Gerrit Dashboard: QTBUG-64082 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 210214,2 | Do not stop findText on navigation if no finding in progress | 5.9 | qt/qtwebengine | Status: MERGED | +2 | 0 |