Do not stop findText on navigation if no finding in progress

Avoid unnecessary unselect calls to prevent to lose active focus on an
input field during background load.

Task-number: QTBUG-64082
Change-Id: I13e8e2a96254360a78329d6ea2b6858da86a2b5a
Reviewed-by: Viktor Engelmann <viktor.engelmann@qt.io>